--- a/vignettes/streamMOA.Rnw
+++ b/vignettes/streamMOA.Rnw
@@ -34,6 +34,10 @@ set.seed(1234)
 
 <<data_bng, fig=TRUE, include=FALSE>>=
 library("streamMOA")
+@
+
+
+<<data_bng, fig=TRUE, include=FALSE>>=
 stream <- DSD_BarsAndGaussians(noise=0.05) %>% DSD_Memory(n = 5500)
 stream
 plot(stream)
